--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
             <div class="project-card">
                 <h3>DutchTreat Web App</h3>
-                <p>A full-stack web application for managing online transactions, built with MVC ASP.NET.</p>
+                <p>A Web application using MVC ASP.NET Core designed to handle e-commerce-like functionalities, including a Contact Us page with advanced validation, data storage, and email integration. </p>
                 <a href="https://github.com/ritayoussef/DutchTreat_Web_App.git" target="_blank">View on GitHub</a>
             </div>
             <div class="project-card">
