--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="contact">
         <p><strong>Connect with me on</strong> <a href="https://github.com/ritayoussef" target="_blank">GitHub</a></p>
         <div align="center">
             <a href="mailto:youssef.rita14@gmail.com">
