--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
             <img width=325 src="https://github-readme-stats.vercel.app/api/top-langs?username=ritayoussef&theme=transparent&layout=donut&hide=css&langs_count=8&border_radius=10&show_icons=true&locale=en" alt="ritayoussef's Most Used Languages" />
         </div>
     </section>
-
-    <footer id="contact">
+<section  id="contact">
+    <footer>
         <p><strong>Connect with me on</strong> <a href="https://github.com/ritayoussef" target="_blank">GitHub</a></p>
         <div align="center">
             <a href="mailto:youssef.rita14@gmail.com">
@@ -348,5 +348,6 @@
         <hr>
         <p>&copy; 2024 Rita Youssef | <a href="#">Back to Top</a></p>
     </footer>
+</section>
 </body>
 </html>
