--- a/index.html
+++ b/index.html
@@ -197,6 +197,23 @@
             border-radius: 10px;
             margin: 20px 0;
         }
+        .buttons {
+            margin-top: 30px;
+            
+        }
+        .buttons a {
+            display: inline-block;
+            text-decoration: none;
+            color: #5d45a0;
+            background: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+        .buttons a:hover {
+            background: #a6d4fa;
+        }
 
         footer {
             text-align: center;
@@ -257,6 +274,10 @@
                 🚀 I will start my first internship in <strong>January 2025</strong> as a Web Developer.<br>
                 💬 Ask me about <strong>JavaScript, HTML/CSS, C#, SQL, Kotlin, Python</strong>, and more.
             </p>
+            <div class="buttons">
+                <a href="./data/YoussefRita.pdf" download="Rita_Youssef_CV.pdf">Download CV</a>
+                <a href="https://github.com/ritayoussef" target="_blank">GitHub</a>
+            </div>
         </div>
     </section>
 
