remove visitor count

--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
         </nav>
     </header>
 
-    <div class="visitor-count">
+    <!-- <div class="visitor-count">
         <p><strong>Visitor Count</strong></p>
         <img src="https://profile-counter.glitch.me/ritayoussef/count.svg" alt="Visitor's Count" />
-    </div>
+    </div> -->
 
     <section class="hero">
         <h2>Welcome to My Portfolio</h2>
