jira picture changed

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
             .tools-container, .certifications-container, .skills-container {
                 flex-direction: column;
                 gap: 15px;
+                justify-content: center;
             }
 
             .project-card, .skill-card, .tool-card {
@@ -525,7 +526,7 @@
                 <p>Cisco Packet Tracer</p>
             </div>
             <div class="tool-card">
-                <img src="./data/jira.png" alt="Jira">
+                <img src="./data/jira.svg" alt="Jira">
                 <p>Jira</p>
             </div>
         </div>
