optimized cert for phone

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 justify-content: center;
             }
 
-            .project-card, .skill-card, .tool-card {
+            .project-card, .skill-card, .tool-card, .cert-card {
                 width: 90%;
                 margin: 0 auto;
             }
