optimize animated text for mobile devices

--- a/index.html
+++ b/index.html
@@ -354,6 +354,17 @@
             .hero h2, .hero p {
                 font-size: 1.5em;
             }
+            .typewriter-container {
+            font-size: 1.5em; 
+            white-space: normal; 
+            width: 100%; 
+            text-align: center;
+        }
+
+        #typewriter-text {
+            font-size: 1.5em; 
+            white-space: normal; 
+        }
 
             .projects {
                 flex-direction: column;
