added game project to my portfolio

--- a/index.html
+++ b/index.html
@@ -445,19 +445,19 @@
         <h2>Projects</h2>
         <div class="projects">
             <div class="project-card">
-                <h3>BIXI Rental</h3>
-                <p>An application to manage bike rentals efficiently, featuring robust backend systems and user-friendly design.</p>
-                <a href="https://github.com/ritayoussef/BIXI_Rental.git" target="_blank">
-                    <button class="btn">View on GitHub</button>
-                </a>
-            </div>
-            <div class="project-card">
                 <h3>DutchTreat Web App</h3>
                 <p>A Web application using MVC ASP.NET Core designed to handle e-commerce-like functionalities, including a Contact Us page with advanced validation.</p>
                 <a href="https://github.com/ritayoussef/DutchTreat_Web_App.git" target="_blank">
                     <button class="btn">View on GitHub</button>
                 </a>
             </div>
+            <div class="project-card">
+                <h3>Space Invaders</h3>
+                <p>An action-packed game inspired by Chicken Invaders, where players battle various alien types, collect powerups from defeating big aliens, and strategize with limited bullets and health.</p>
+                <a href="https://github.com/ritayoussef/SpaceInvaders.git" target="_blank">
+                    <button class="btn">View on GitHub</button>
+                </a>
+            </div>                    
             <div class="project-card">
                 <h3>SportexApp</h3>
                 <p>A fitness-focused mobile app developed using Kotlin, encouraging users to meet their activity goals.</p>
@@ -469,6 +469,13 @@
                 <h3>Pinteresting</h3>
                 <p>A Pinterest-inspired web application for organizing and sharing visual content, created with modern web technologies.</p>
                 <a href="https://github.com/ritayoussef/Pinteresting.git" target="_blank">
+                    <button class="btn">View on GitHub</button>
+                </a>
+            </div>
+            <div class="project-card">
+                <h3>BIXI Rental</h3>
+                <p>An application to manage bike rentals efficiently, featuring robust backend systems and user-friendly design.</p>
+                <a href="https://github.com/ritayoussef/BIXI_Rental.git" target="_blank">
                     <button class="btn">View on GitHub</button>
                 </a>
             </div>
