added React.js certificate

--- a/index.html
+++ b/index.html
@@ -566,6 +566,10 @@
                 <p>Azure Microservices with .NET Core</p>
                 <a href="./data/CertificateOfCompletion_Azure Microservices with .NET Core for Developers.pdf" download="CertificateOfCompletion_Azure Microservices with .NET Core for Developers.pdf"><button class="btn">View Certificate</button></a>
             </div>
+            <div class="cert-card">
+                <p>React Essential Training</p>
+                <a href="./data/CertificateOfCompletion_React Essential Training.pdf" download="CertificateOfCompletion_React Essential Training.pdf"><button class="btn">View Certificate</button></a>
+            </div>
         </div>
     </section>
 
