--- a/index.html
+++ b/index.html
@@ -423,8 +423,7 @@
                 📝 I love integrating my aesthetics and creativity into computer science projects.<br>
                 🎮 I have been a gamer since I was 6 years old.<br>
                 🎡 Fun fact: I still play Claw on my PC 🖥️.<br>
-                📚 I'm currently learning <strong>React.js</strong>.<br>
-                🚀 I will start my first internship in <strong>January 2025</strong> as a Web Developer.<br>
+                🚀 I started first internship in <strong>January 2025</strong> as a Web Developer.<br>
                 💬 Ask me about <strong>JavaScript, HTML/CSS, C#, SQL, Kotlin, Python</strong>, and more.
             </p>
             <div class="buttons">
