--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             </div>
             <div class="project-card">
                 <h3>BIXI Rental</h3>
-                <p>An application to manage bike rentals efficiently, featuring robust backend systems and user-friendly design.</p>
+                <p>A website to manage bike rentals efficiently, featuring robust backend systems and user-friendly design.</p>
                 <a href="https://github.com/ritayoussef/BIXI_Rental.git" target="_blank">
                     <button class="btn">View on GitHub</button>
                 </a>
