--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <section id="about" class="section">
         <div class="profile">
-            <img src="./data/profile.jpg" alt="Profile Picture">
+            <img src="./data/IMG_7133.jpeg" alt="Profile Picture">
             <h2>Computer Science Student 👩🏽‍💻</h2>
             <div class="arrow">
                 <a href="#about-details">&#8595;</a>
