--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     
     <section class="hero">
         <h1 id="typewriter-text"></h1>
-        <p>Discover my journey as a 3rd year Computer Science student, my passion for development, and my creative projects.</p>
+        <p>Explore my journey in Computer Science, my passion for development, and the creative projects I bring to life.</p>
         <div class="mouse-scroll">
             <div class="mouse"></div>
         </div>
@@ -411,7 +411,7 @@
 
     <section id="about" class="section">
         <div class="profile">
-            <img src="./data/IMG_7133.jpeg" alt="Profile Picture">
+            <img src="./data/IMG_7133.jpg" alt="Profile Picture">
             <h2>Computer Science Student 👩🏽‍💻</h2>
             <div class="arrow">
                 <a href="#about-details">&#8595;</a>
@@ -436,7 +436,8 @@
     <section id="education" class="section">
         <div class="card">
             <h2>Education</h2>
-            <p>DEC in Computer Science 🖥️ - expected in May 2025 👩🏽‍🎓</p>
+            <p>DEC in Computer Science 🖥️ — John Abbott College 🎓</p>
+            <p>B.A. Major in Computer Science 💻 — McGill University (current)</p>
         </div>
     </section>
 
