Add skill cards for C and Java

--- a/index.html
+++ b/index.html
@@ -510,6 +510,14 @@
                 <p>Kotlin</p>
             </div>
             <div class="skill-card">
+                <img src="./data/c.png" alt="C">
+                <p>C</p>
+            </div>
+             <div class="skill-card">
+                <img src="./data/java.png" alt="Java">
+                <p>Java</p>
+            </div>
+             <div class="skill-card">
                 <img src="./data/python.png" alt="Python">
                 <p>Python</p>
             </div>
